# potiguar-api

./: .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.txt  README.md  docker-compose.yml  pyproject.toml  test.py
.github/workflows/: workflow_testing.yaml
compose/api/: Dockerfile
compose/worker/: Dockerfile
docker/worker/: Dockerfile
src/: app_module.py  app_service.py  config.py
src/apps/detran_rn_crawler/: detran_rn_crawler_controller.py  detran_rn_crawler_entity.py  detran_rn_crawler_model.py  detran_rn_crawler_module.py  detran_rn_crawler_service.py
src/apps/order/: order_controller.py  order_entity.py  order_model.py  order_module.py  order_service.py
src/apps/order/exceptions/: conflict_order_exception.py  handlers_order_expections.py  identifier_not_valid.py  order_not_found_exception.py
src/apps/tasks/: tasks_module.py  tasks_service.py
src/middlewares/: rate_limit_middleware.py
src/providers/potiguar_lookup/: potiguar_lookup_exception.py  potiguar_lookup_module.py  potiguar_lookup_service.py  proxy_manager.py  token_manager.py
src/providers/recaptcha/: recaptcha_exception.py  recaptcha_module.py  recaptcha_service.py
tests/order/: create_order_test.py  test_order_model.py
